# agent-forge

./: .gitignore  .mailmap  DEMO.md  DEPLOY.md  README.md  docker-compose.prod.yml  index.html  package.json  pytest.ini  web.Dockerfile
deploy/env/: server.env.prod.example
deploy/nginx/: agent-forge.conf  web.docker.conf
deploy/systemd/: agent-forge-api.service
installer/: install.py
server/: .dockerignore  Dockerfile  gunicorn.conf.py  pyproject.toml
server/alembic/versions/: a1b2c3d4e5f6_executions_idempotency_unique.py  a2c3d4e5f6g7_add_policy_rules.py  a7c3e9f21b40_operation_source_id.py  b8d5f0a3c216_chat_session_source_id.py  f2a4c8e1d905_operation_binding_json.py
server/app/: config.py  deps.py  logging_config.py  main.py  seed.py  worker.py
server/app/agents/: orchestrator.py
server/app/api/: approvals.py  chat.py  executions.py  health.py  identity.py  registry.py  sources.py  traces.py
server/app/executors/: base.py
server/app/models/: chat.py  registry.py
server/app/services/: exploration_prompts.py  explorer.py  graphql_disco.py  llm.py  planner.py  qparser.py  s3_disco.py  source_disco.py  targets.py  xmlrpc_disco.py
server/tests/: test_chain.py  test_core.py  test_execution.py  test_graphql.py  test_llm_parse.py  test_llm_profiles.py  test_s3_sigv4.py  test_security.py  test_source_disco.py  test_targets.py  test_xmlrpc.py
src/: App.tsx  index.css  main.tsx
src/api/: http.test.ts  http.ts  types.ts
src/components/: Shell.test.tsx  Shell.tsx  ThemeToggle.tsx  WelcomeModal.tsx
src/demo/: hash.ts  install.ts  pacing.ts  router.ts  (+4 more)
(+51 files in other folders)
